--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-portal": "^1.1.9",
     "clsx": "^2.1.1",
     "next": "16.0.0",
     "react": "19.2.0",
